<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="instructions">Touch and move the image.  Touch with a second finger to scale.</string>
    <string name="statuspanelhint">(status)</string>
    <string name="resetbuttontext">Reset</string>
    <string name="app_name">EECS4443 Project - Controller</string>
    <string name="setuptitletext">EECS4443 Project - Controller Setup</string>
    <string name="paramlabeltypeofcontrol">Type of Controller</string>
    <string name="paramlabelgaintext">Gain</string>
    <string name="paramlabelpathwidthtext">Path width</string>
    <string name="paramlabelpathtypetext">Path type</string>
    <string name="button01text">OK</string>
    <string name="button03text">Exit</string>
    <string name="resultText">Test Result</string>


    <string name="resulttestcount">Test Count = </string>
    <string name="resulttotaltime">Test Total Time = </string>
    <string name="resultmissrate">Miss Count = </string>
    <string name="resultSetupButtonText">Setup</string>
    <string name="resultExitButtonText">Exit</string>
</resources>