<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#ff123456"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/setupTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/resultText"
            android:textSize="16pt" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">
            <TableRow>
                <TextView
                    android:id="@+id/resulttestcountlabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/resulttestcount"
                    android:gravity="right"/>
                <TextView
                    android:id="@+id/resulttestcount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/resulttotaltimelabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/resulttotaltime"
                    android:gravity="right" />
                <TextView
                    android:id="@+id/resulttotaltime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/resultmissratelabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/resultmissrate"
                    android:gravity="right" />
                <TextView
                    android:id="@+id/resultmissrate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </TableRow>
            <TableLayout
                android:id="@+id/resulttable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

            </TableLayout>

        </TableLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/resultSetupButton"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:onClick="setupButtonClicked"
                android:text="@string/resultSetupButtonText"
                android:textAppearance="?android:attr/textAppearanceMedium"></Button>

            <Button
                android:id="@+id/resultExitButton"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:onClick="clickExit"
                android:text="@string/resultExitButtonText"
                android:textAppearance="?android:attr/textAppearanceMedium"></Button>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>